docs: Fix Regex doc horizontal alignment

--- a/docs/book/styles/website.css
+++ b/docs/book/styles/website.css
@@ -41,6 +41,10 @@ h6{
   white-space: nowrap;
 }
 
+.opa-keep-it-normal{
+  white-space: normal;
+}
+
 .chapter{
   font-family: Roboto !important;
 }
